# uss-patagon-cluster

./: .gitignore  README.md  insumos.txt  references.txt
HELLO_MPI/: CMakeLists.txt  mpi_hello_world.cpp
commands/: 00_git_setup.sh  01_cpp_dev_setup.sh  02_mpi_install.sh  03_cmake_install.sh  04_all_in_one.sh  04_enable_ssh.sh  05_all_in_one.sh  README.md
examples/: hostfile  mpi_hosts.txt  rankfile
examples/conway/: CMakeLists.txt  README.md  conway_life.cpp  mpi_life  mpi_life.cpp  script_conway.sh
examples/fractal/: CMakeLists.txt  README.md  main.cpp  script.sh
examples/msg_ring/: CMakeLists.txt  mpi_ring.cpp  ring.cpp  ring2.cpp  script_ring.sh  script_ring2.sh
examples/pi/: CMakeLists.txt  mpi_pi.cpp  script_pi.sh
examples/raidMPI/: RaidMPI.cpp
